--- a/_modules/index.html
+++ b/_modules/index.html
@@ -53,6 +53,7 @@
 <li><a href="optimal_learning/EPI/src/python/models/covariance_of_process.html">optimal_learning.EPI.src.python.models.covariance_of_process</a></li>
 <li><a href="optimal_learning/EPI/src/python/models/gaussian_process.html">optimal_learning.EPI.src.python.models.gaussian_process</a></li>
 <li><a href="optimal_learning/EPI/src/python/models/optimal_gaussian_process.html">optimal_learning.EPI.src.python.models.optimal_gaussian_process</a></li>
+<li><a href="optimal_learning/EPI/src/python/models/optimal_gaussian_process_linked_cpp.html">optimal_learning.EPI.src.python.models.optimal_gaussian_process_linked_cpp</a></li>
 <li><a href="optimal_learning/EPI/src/python/models/plottable_optimal_gaussian_process.html">optimal_learning.EPI.src.python.models.plottable_optimal_gaussian_process</a></li>
 <li><a href="optimal_learning/EPI/src/python/models/sample_point.html">optimal_learning.EPI.src.python.models.sample_point</a></li>
 </ul>
