--- a/_modules/moe/optimal_learning/python/geometry_utils.html
+++ b/_modules/moe/optimal_learning/python/geometry_utils.html
@@ -171,7 +171,7 @@
 <span class="sd">    :rtype: array of float64 with shape (num_points, dim)</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="c"># TODO(eliu): actually allow users to pass in a random source (GH-56)</span>
+    <span class="c"># TODO(GH-56): Allow users to pass in a random source.</span>
     <span class="k">if</span> <span class="n">num_points</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">numpy</span><span class="o">.</span><span class="n">array</span><span class="p">([])</span>
 
