--- a/_modules/moe/optimal_learning/python/interfaces/covariance_interface.html
+++ b/_modules/moe/optimal_learning/python/interfaces/covariance_interface.html
@@ -191,9 +191,7 @@
 
 <span class="sd">    Implementers of this ABC are required to manage their own hyperparameters.</span>
 
-<span class="sd">    TODO(eliu): getter/setter for hyperparameters. maybe following this?</span>
-<span class="sd">    http://google-styleguide.googlecode.com/svn/trunk/pyguide.html#Function_and_Method_Decorators</span>
-<span class="sd">    How to make it work with ABCs?</span>
+<span class="sd">    TODO(GH-71): getter/setter for hyperparameters.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
