--- a/_modules/moe/optimal_learning/python/interfaces/optimization_interface.html
+++ b/_modules/moe/optimal_learning/python/interfaces/optimization_interface.html
@@ -181,9 +181,7 @@
 <span class="sd">    For Expected Improvement (e.g., python_version.expected_improvement.ExpectedImprovement), ``f`` would be the EI,</span>
 <span class="sd">    ``x`` is the new experiment point (or points) being optimized, and ``problem_size`` is ``dim`` (or ``num_points*dim``).</span>
 
-<span class="sd">    TODO(eliu): getter/setter for current_point. maybe following this?</span>
-<span class="sd">    http://google-styleguide.googlecode.com/svn/trunk/pyguide.html#Function_and_Method_Decorators</span>
-<span class="sd">    How to make it work with ABCs?</span>
+<span class="sd">    TODO(GH-71): getter/setter for current_point.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -272,7 +270,7 @@
 <span class="sd">        optimal point (as determined by optimization) should be available through the OptimizableInterface data</span>
 <span class="sd">        member&#39;s ``get_current_point`` method.</span>
 
-<span class="sd">        # TODO(eliu): pass the best point, fcn value, etc. in thru an IOContainer-like structure (GH-59)</span>
+<span class="sd">        TODO(GH-59): Pass the best point, fcn value, etc. in thru an IOContainer-like structure.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">pass</span></div></div>
