--- a/_modules/moe/optimal_learning/python/python_version/covariance.html
+++ b/_modules/moe/optimal_learning/python/python_version/covariance.html
@@ -301,7 +301,7 @@
 <div class="viewcode-block" id="SquareExponential.hyperparameter_hessian_covariance"><a class="viewcode-back" href="../../../../../moe.optimal_learning.python.python_version.html#moe.optimal_learning.python.python_version.covariance.SquareExponential.hyperparameter_hessian_covariance">[docs]</a>    <span class="k">def</span> <span class="nf">hyperparameter_hessian_covariance</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">point_one</span><span class="p">,</span> <span class="n">point_two</span><span class="p">):</span>
         <span class="sd">r&quot;&quot;&quot;Compute the hessian of self.covariance(point_one, point_two) with respect to its hyperparameters.</span>
 
-<span class="sd">        TODO(eliu): implement Hessians in Python (GH-57).</span>
+<span class="sd">        TODO(GH-57): Implement Hessians in Python.</span>
 
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">raise</span> <span class="ne">NotImplementedError</span><span class="p">(</span><span class="s">&quot;Python implementation does not support computing the hessian covariance wrt hyperparameters.&quot;</span><span class="p">)</span></div></div>
