--- a/_modules/moe/tests/optimal_learning/python/cpp_unit_tests/cpp_unit_test_wrapper_test.html
+++ b/_modules/moe/tests/optimal_learning/python/cpp_unit_tests/cpp_unit_test_wrapper_test.html
@@ -157,7 +157,7 @@
 
     <span class="sd">&quot;&quot;&quot;Calls a C++ function that runs all C++ unit tests.</span>
 
-<span class="sd">    TODO(eliu): (ADS-2223) remove/fix this once C++ gets a proper unit testing framework.</span>
+<span class="sd">    TODO(GH-115): Remove/fix this once C++ gets a proper unit testing framework.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
