--- a/_modules/moe/tests/optimal_learning/python/optimal_learning_test_case.html
+++ b/_modules/moe/tests/optimal_learning/python/optimal_learning_test_case.html
@@ -149,7 +149,7 @@
 <span class="c"># -*- coding: utf-8 -*-</span>
 <span class="sd">&quot;&quot;&quot;Base test case class for optimal_learning tests; includes some additional asserts for numerical tests.</span>
 
-<span class="sd">TODO(eliu): generalize ping testing code used in some derivative tests (e.g., covariance, log likelihood pinging)</span>
+<span class="sd">TODO(GH-175): Generalize ping testing code used in some derivative tests (e.g., covariance, log likelihood pinging)</span>
 <span class="sd">to be more DRY (model after C++ test cases). We can set up one ping tester and just pass it objective functions.</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
