--- a/_modules/moe/tests/optimal_learning/python/python_version/covariance_test.html
+++ b/_modules/moe/tests/optimal_learning/python/python_version/covariance_test.html
@@ -151,10 +151,9 @@
 
 <span class="sd">Testing is sparse at the moment. The C++ implementations are tested thoroughly (gpp_covariance_test.hpp/cpp) and</span>
 <span class="sd">we rely more on cpp_wrappers/covariance_test.py&#39;s comparison with C++ for verification of the Python code.</span>
-<span class="sd">x</span>
-<span class="sd">TODO(eliu): test hyperparameter gradient</span>
-<span class="sd">TODO(eliu): ping testing for spatial gradients</span>
-<span class="sd">TODO(eliu): make test structure general enough to support other covariance functions automatically</span>
+
+<span class="sd">TODO(GH-175): Ping testing for spatial gradients and hyperparameter gradients/hessian.</span>
+<span class="sd">TODO(GH-176): Make test structure general enough to support other covariance functions automatically.</span>
 
 <span class="sd">&quot;&quot;&quot;</span>
 <span class="kn">import</span> <span class="nn">numpy</span>
