--- a/_modules/moe/tests/optimal_learning/python/python_version/optimization_test.html
+++ b/_modules/moe/tests/optimal_learning/python/python_version/optimization_test.html
@@ -298,7 +298,7 @@
 <span class="sd">    \* This is not much of a test. The problem is convex and isotropic so GD will take a more or less straight</span>
 <span class="sd">    path to the maxima. Averaging can only reduce the accuracy of the solve.</span>
 
-<span class="sd">    TODO(eliu): build a simple stochastic objective and test the stochastic component fully.</span>
+<span class="sd">    TODO(GH-179): Build a simple stochastic objective and test the stochastic component fully.</span>
 
 <span class="sd">    &quot;&quot;&quot;</span>
 
