--- a/gpp_domain_test.html
+++ b/gpp_domain_test.html
@@ -177,7 +177,7 @@
 <li>CheckPointInDomain: specify a domain, point list, and truth values.  checks that points are/are not inside</li>
 <li>GeneratePointInDomain: generates some random points, checks that they are inside the domain</li>
 <li>GenerateUniformPointsInDomain: generates uniformly distributed points, checks that they are inside the domain
-TODO(eliu): Test whether computed point distribution is actually uniform (ADS-3099)</li>
+TODO(GH-128): Test whether computed point distribution is actually uniform</li>
 <li>LimitUpdate: starting from points within the domain, checks that:<ul>
 <li>updates to another point in the domain remain unchanged</li>
 <li>updates to a point outside the domain are limited such that the new endpoint is in the domain</li>
