--- a/gpp_logging.html
+++ b/gpp_logging.html
@@ -163,9 +163,9 @@
 the verbosity level must be chosen at compile-time, although we do provide separate macros for
 debug, verbose, warning, and error.</p>
 <p>We also have utilities for printing commonly used structures in the code. Currently this file contains
-a printer for an array of ClosedInterval. Printers for vectors/matrices will be moved in #60254.</p>
-<p>Long term, this file will connect to a real logging library (see TODO below).</p>
-<p>TODO(eliu): (#48960) connect MOE/C++ to a real logging library instead of using stdout as our log.</p>
+a printer for an array of ClosedInterval.</p>
+<p>Long term, this file will connect to a real logging library.</p>
+<p>TODO(GH-130): connect MOE/C++ to a real logging library instead of using stdout as our log.</p>
  </p>
 <em>Defines</em><blockquote>
 <div><p><span class="target" id="project0gpp__logging_8hpp_1ae6613a791e24a87a619fa3812b75d299"></span><strong>OL_DEBUG_PRINTF</strong>(...)</p>
