--- a/gpp_test_utils_test.html
+++ b/gpp_test_utils_test.html
@@ -173,7 +173,7 @@
 <p><p>This file contains functions for testing the functions and classes in gpp_test_utils.hpp. These
 tests are generally pretty simple since these functions implicitly work; e.g., if
 CheckDoubleWithinRelative() were wrong, other tests wouldn&#8217;t make any sense.</p>
-<p>TODO(eliu): #66842 implement the rest of the unit tests for gpp_test_utils</p>
+<p>TODO(GH-122): implement the rest of the unit tests for gpp_test_utils</p>
  </p>
 <p><p id="project0namespaceoptimal__learning"><em>namespace</em> <strong>optimal_learning</strong></p>
 <blockquote>
