--- a/_modules/moe/optimal_learning/python/cpp_wrappers/optimization.html
+++ b/_modules/moe/optimal_learning/python/cpp_wrappers/optimization.html
@@ -322,7 +322,9 @@
 
 <span class="sd">Currently we let the user specify the initial guesses.  In practice, this typically means a random sampling of points.</span>
 <span class="sd">We do not (yet) make any effort to say sample more heavily from regions where &quot;more stuff is happening&quot; or any</span>
-<span class="sd">other heuristics.  TODO(eliu): improve multistart heuristics (#57985).</span>
+<span class="sd">other heuristics.</span>
+
+<span class="sd">TODO(GH-165): Improve multistart heuristics.</span>
 
 <span class="sd">Finally, MultistartOptimizer::MultistartOptimize() is also used to provide &#39;dumb&#39; search functionality (optimization</span>
 <span class="sd">by just evaluating the objective at numerous points).  For sufficiently complex problems, gradient descent, Newton, etc.</span>
