--- a/gpp_optimization.html
+++ b/gpp_optimization.html
@@ -299,7 +299,8 @@ functionality is provided in MultistartOptimizer::MultistartOptimize(...).</p>
 Multistarting is NOT GUARANTEED to find global optima.  But it can increase the chances of success.</p>
 <p>Currently we let the user specify the initial guesses.  In practice, this typically means a random sampling of points.
 We do not (yet) make any effort to say sample more heavily from regions where &#8220;more stuff is happening&#8221; or any
-other heuristics.  TODO(eliu): improve multistart heuristics (#57985).</p>
+other heuristics.</p>
+<p>TODO(GH-165): Improve multistart heuristics.</p>
 <p>Finally, MultistartOptimizer::MultistartOptimize() is also used to provide &#8216;dumb&#8217; search functionality (optimization
 by just evaluating the objective at numerous points).  For sufficiently complex problems, gradient descent, Newton, etc.
 can have exceptionally poor convergence characteristics or run too slowly.  In cases where these more advanced techniques
@@ -359,9 +360,8 @@ do not provide the above interface.</p>
 Finally we will touch on the MultistartOptimizer template class.</p>
 <p><strong>3b, i. OPTIMIZER CLASS TEMPLATE</strong></p>
 <p>As mentioned above, this file provides various Optimizer classes, e.g., NewtonOptimizer.  Here we&#8217;ll go over high
-level details and then go through each specific example.
-TODO(eliu): (#45086) firm up class design.  Currently the classes are very bare-bones; they have just one method (Optimize) and
-no state.  I made classes to make templating MultistartOptimizer easier.</p>
+level details and then go through each specific example.</p>
+<p>TODO(GH-174): Include objective, param struct, domain, etc. as Optimizer class members (copies or references).</p>
 <p>In general, the Optimizer classes are the primary endpoint for local optimization; i.e., you have a good initial guess
 and you are confident that the optima is nearby.  In current use cases, this is uncommon.  But when it is true, multistart
 will waste a lot of compute time to arrive at the same result.
@@ -548,8 +548,7 @@ objective_state.GetCurrentPoint() (see previous item)</td>
 </table>
 </dd>
 </dl>
-<p>TODO(eliu): much like in the Optimizer classes (where this is now fixed), the next_point output is redundant. It just has
-the same data as objective_state.GetCurrentPoint().  I should remove it.</p>
+<p>TODO(GH-186): The next_point output is redundant with objective_state.GetCurrentPoint(). Remove it.</p>
  </p>
 </div></blockquote>
 <p><span class="target" id="project0namespaceoptimal__learning_1a4c118ee2a894733f0aacd04a68e34da7"></span><div class="line-block">
@@ -625,13 +624,14 @@ this with tolerance in gradient descent.)
 The suggested value is 1.0e-13, although this may need to be
 loosened for ill-conditioned problems.  Setting too high of a tolerance can cause wrong answers&#8211;e.g., we stop at a point
 that is not an optima but simply an region with small gradient.  Setting the tolerance too low will make convergence impossible
-due to loss of accuracy through numerical effects.
-TODO(eliu): (#57983) Investigate/add stagnation detection to newton, so it stops when going too many steps without improving the result.</p>
-<p>Improving Newton&#8217;s performance/robustness is a part of #48414, #47421.</p>
+due to loss of accuracy through numerical effects.</p>
+<p>TODO(GH-161): Investigate/add stagnation detection to newton, so it stops when going too many steps without improving the result.</p>
+<p>TODO(GH-133): (GH-134) Improve Newton&#8217;s performance/robustness.</p>
 <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
 <p class="last">this method does not check the eigenvalues of H at this solution to verify that it is an optima and not a saddle
-or an indeterminate result.  (TODO(eliu): #49119)</p>
+or an indeterminate result.
+TODO(GH-121): Add optima classification to Newton.</p>
 </div>
 <p>Solution is guaranteed to lie within the region specified by &#8220;domain&#8221;; note that this may not be a
 true optima (i.e., the gradient may be substantially nonzero).</p>
@@ -1246,8 +1246,8 @@ unchanged from input otherwise. See struct docs in gpp_optimization.hpp for deta
 </table>
 </dd>
 </dl>
-<p>TODO(eliu): consider having multiple versions of this for static/guided/dynamic scheduling. unforutnately openmp doesn&#8217;t
-let you choose that parameter programmatically :(  Need to demonstrate a need for it though, otherwise guided might be good
+<p>TODO(GH-150): consider having multiple versions of this for static/guided/dynamic scheduling.
+Unforutnately openmp doesn&#8217;t let you choose that parameter programmatically. This would be nice for testing.
 enough</p>
  </p>
 </div></blockquote>
